--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,10 @@ body {
   margin: -1px;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .social-box__icon, .social-box__team, .team-box__icon, .team-box__social {
   display: flex;
   justify-content: center;
@@ -288,8 +292,6 @@ body {
 .mobile-menu__iten {
   display: block;
   margin-left: 40px;
-}
-.mobile-menu__iten:not(:last-child) {
   margin-bottom: 32px;
 }
 
@@ -332,7 +334,8 @@ body {
 .mob-contacts__list:hover, .mob-contacts__list:focus {
   color: var(--activ-color);
 }
-.mob-contacts__list--activ {
+.mob-contacts__list-tel {
+  white-space: nowrap;
   font-weight: 500;
   font-size: 34px;
   line-height: 1.18;
@@ -341,7 +344,7 @@ body {
   color: var(--activ-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mob-contacts__list--activ:hover, .mob-contacts__list--activ:focus {
+.mob-contacts__list-tel:hover, .mob-contacts__list-tel:focus {
   color: #188ce8;
 }
 
