--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -1,52 +1,99 @@
 .heading {
   background-color: #c4c4c4;
-//   height: 600px;
-//   padding-top: 200px;
+  //   height: 600px;
+  //   padding-top: 200px;
   height: 400px;
   padding-top: 118px;
+  flex-grow: 1;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../img/hero.jpg);
+    url(../img/hero-mob.jpg);
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/hero-mob2x.jpg);
+  }
 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  @media screen and (min-width: 768px) {
+    height: 600px;
+    padding-top: 200px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/hero-tab.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../img/hero-tab2x.jpg);
+    }
+  }
+
   @media screen and (min-width: 1200px) {
-   height: 600px;
-   padding-top: 200px;
-}
+    height: 600px;
+    padding-top: 200px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/hero.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../img/hero2x.jpg);
+    }
+  }
   &__container {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     flex-wrap: wrap;
-     
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
   }
   &__text {
     display: block;
     margin-top: 0;
     margin-bottom: 30px;
     text-align: center;
-    
+
     font-weight: 900;
-   //  font-size: 44px;
+    //  font-size: 44px;
     font-size: 26px;
     line-height: 1.61;
-   //  line-height: 1.36;
+    //  line-height: 1.36;
     text-transform: uppercase;
     color: var(--color-text-reserve);
     letter-spacing: 0.06em;
     @media screen and (min-width: 480px) {
       margin-left: 60px;
       margin-right: 60px;
-}
+    }
     @media screen and (min-width: 768px) {
-         margin-left: 204px;
-         margin-right: 204px;
-}
+      margin-left: 204px;
+      margin-right: 204px;
+    }
     @media screen and (min-width: 1200px) {
       margin-left: 252px;
       margin-right: 252px;
@@ -61,7 +108,7 @@
     text-align: center;
     border: 2px solid var(--activ-color);
     border-radius: 4px;
-   //  margin: 0 485px;
+    //  margin: 0 485px;
 
     width: 200px;
     height: 50px;
@@ -76,7 +123,6 @@
     letter-spacing: 0.06em;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
 
     &:hover,
     &:focus {
